update Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -18,39 +18,7 @@
             <div class="shadow-layer"></div>
         </div>
 
-        <div class="container text-container" style="z-index: 5;">
-            <div class="contentlogo">
-                <img alt="content logo" class="show-logo"
-                     th:src="@{/web/images/tv-show/poster/never-have-ever-logo.webp}"/>
-            </div>
-            <!--top 10 ranking badge svg-->
-            <div class="ranking d-flex m-t-20 flex-middle">
-                <span class="p-l-10">#2 in India Today</span>
-            </div>
-
-            <div class="synopsis m-t-20" style="max-width: 500px;">
-                <p>
-                    Getting the grades? Too easy. Getting through grief? Too hard. This year, there’s just
-                    one goal
-                    on her mind: getting the guy.
-                </p>
-            </div>
-            <div class="buttons-container m-t-20">
-                <button class="play-button"><span>
-                           <svg viewBox="0 0 24 24">
-                              <path d="M6 4l15 8-15 8z" fill="currentColor"></path>
-                           </svg>
-                        </span> <a href="single.html">Play</a></button>
-
-                <button class="more-info-button m-t-20"><span>
-                           <svg viewBox="0 0 24 24">
-                              <path
-                                      d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-2 0a8 8 0 0 0-8-8 8 8 0 0 0-8 8 8 8 0 0 0 8 8 8 8 0 0 0 8-8zm-9 6v-7h2v7h-2zm1-8.75a1.21 1.21 0 0 1-.877-.364A1.188 1.188 0 0 1 10.75 8c0-.348.123-.644.372-.886.247-.242.54-.364.878-.364.337 0 .63.122.877.364.248.242.373.538.373.886s-.124.644-.373.886A1.21 1.21 0 0 1 12 9.25z"
-                                      fill="currentColor"></path>
-                           </svg>
-                        </span> More Info
-                </button>
-            </div>
+        <div class="container text-container" style="z-index: 5; height: 250px">
         </div>
     </section>
 </div>
@@ -65,83 +33,6 @@
             <div class="video">
                 <img alt=""
                      class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/1.jpg}">
-                <div class="video-description d-flex flex-end direction-column">
-                    <div class="play-button">
-                        <svg viewBox="0 0 24 24">
-                            <path d="M6 4l15 8-15 8z" fill="black"></path>
-                        </svg>
-                    </div>
-                    <div>
-                        <h4 class="heading f-w-8 text-shadow">
-                            Never Have I Ever
-                        </h4>
-                    </div>
-                    <div class="info d-flex flex-middle flex-no-wrap">
-                        <p class="rated text-shadow"><strong>18+</strong></p>
-                        <p class="season-count text-shadow"> 1 Season</p>
-                    </div>
-                    <div class="genere d-flex flex-no-wrap text-shadow">
-                        <p>#Nudeity</p>
-                        <p>#Romance</p>
-                        <p>#Love</p>
-                    </div>
-                </div>
-            </div>
-            <div class="video">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/canhbuomrakhoingaygio.jpg}">
-                <div class="video-description d-flex flex-end direction-column">
-                    <div class="play-button">
-                        <svg viewBox="0 0 24 24">
-                            <path d="M6 4l15 8-15 8z" fill="black"></path>
-                        </svg>
-                    </div>
-                    <div>
-                        <h4 class="heading f-w-8 text-shadow">
-                            Never Have I Ever
-                        </h4>
-                    </div>
-                    <div class="info d-flex flex-middle flex-no-wrap">
-                        <p class="rated text-shadow"><strong>18+</strong></p>
-                        <p class="season-count text-shadow"> 1 Season</p>
-                    </div>
-                    <div class="genere d-flex flex-no-wrap text-shadow">
-                        <p>#Nudeity</p>
-                        <p>#Romance</p>
-                        <p>#Love</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="video">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/ironman   .jpg}">
-                <div class="video-description d-flex flex-end direction-column">
-                    <div class="play-button">
-                        <svg viewBox="0 0 24 24">
-                            <path d="M6 4l15 8-15 8z" fill="black"></path>
-                        </svg>
-                    </div>
-                    <div>
-                        <h4 class="heading f-w-8 text-shadow">
-                            Never Have I Ever
-                        </h4>
-                    </div>
-                    <div class="info d-flex flex-middle flex-no-wrap">
-                        <p class="rated text-shadow"><strong>18+</strong></p>
-                        <p class="season-count text-shadow"> 1 Season</p>
-                    </div>
-                    <div class="genere d-flex flex-no-wrap text-shadow">
-                        <p>#Nudeity</p>
-                        <p>#Romance</p>
-                        <p>#Love</p>
-                    </div>
-                </div>
-            </div>
-
-            <div class="video">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}">
                 <div class="video-description d-flex flex-end direction-column">
                     <div class="play-button">
                         <svg viewBox="0 0 24 24">
@@ -216,24 +107,7 @@
         </h4>
         <div class="romantic-container d-flex flex-start flex-middle flex-no-wrap owl-carousel">
             <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-
-            <a href="#">
-                <img alt=""
-                      class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
+                <img class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
         </div>
     </section>
 
@@ -246,18 +120,6 @@
             <a href="#">
                 <img alt=""
                      class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
-            <a href="#">
-                <img alt=""
-                     class="mylist-img p-r-10 p-t-10 video-item" th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}"></a>
         </div>
     </section>
 
@@ -267,18 +129,6 @@
             Hollywood Action Movies
         </h4>
         <div class="romantic-container d-flex flex-start flex-middle flex-no-wrap owl-carousel">
-            <a href="#">
-                <img class="mylist-img p-r-10 p-t-10 video-item"
-                     th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}" alt=""></a>
-            <a href="#">
-                <img class="mylist-img p-r-10 p-t-10 video-item"
-                     th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}" alt=""></a>
-            <a href="#">
-                <img class="mylist-img p-r-10 p-t-10 video-item"
-                     th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}" alt=""></a>
-            <a href="#">
-                <img class="mylist-img p-r-10 p-t-10 video-item"
-                     th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}" alt=""></a>
             <a href="#">
                 <img class="mylist-img p-r-10 p-t-10 video-item"
                      th:src="@{/web/images/tv-show/poster/never-have-ever-short poster.jpg}" alt=""></a>
