movie detail Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/web/layout.html
+++ b/src/main/resources/templates/web/layout.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" th:href="@{/web/css/global.css}">
     <link rel="stylesheet" th:href="@{/web/css/browse.css}">
     <link rel="stylesheet" th:href="@{/web/css/custom.css}">
+    <link rel="stylesheet" th:href="@{/web/css/movie-detail.css}">
 </head>
 
 <body>
