--- a/src/main/resources/templates/web/layout.html
+++ b/src/main/resources/templates/web/layout.html
@@ -68,19 +68,19 @@
             <i aria-hidden="true" class="fa fa-heart icon-heart"></i>
             <div class="dropdown-content">
                 <a class="profile-item d-flex flex-middle" href="#">
-                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user2.png">
+<!--                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user2.png">-->
                     <span>You have new notification from <span>User 123</span></span>
                 </a>
                 <a class="profile-item d-flex flex-middle" href="#">
-                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user1.png">
+<!--                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user1.png">-->
                     <span>You have new notification from <span>User 123</span></span>
                 </a>
                 <a class="profile-item d-flex flex-middle" href="#">
-                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user4.png">
+<!--                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user4.png">-->
                     <span>You have new notification from <span>User 123</span></span>
                 </a>
                 <a class="profile-item d-flex flex-middle" href="#">
-                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user3.png">
+<!--                    <img alt="user profile icon" class="user-icon" src="../../images/icons/user3.png">-->
                     <span>You have new notification from <span>User 123</span></span>
                 </a>
             </div>
@@ -92,19 +92,19 @@
             <div class="dropdown-content">
                 <div class="profile-links">
                     <a class="profile-item d-flex flex-middle" href="#">
-                        <img alt="user profile icon" class="user-icon" src="../images/icons/user1.png">
+<!--                        <img alt="user profile icon" class="user-icon" src="../images/icons/user1.png">-->
                         <span>Rajesh</span>
                     </a>
                     <a class="profile-item d-flex flex-middle" href="#">
-                        <img alt="user profile icon" class="user-icon" src="../images/icons/user2.png">
+<!--                        <img alt="user profile icon" class="user-icon" src="../images/icons/user2.png">-->
                         <span>Karan</span>
                     </a>
                     <a class="profile-item d-flex flex-middle" href="#">
-                        <img alt="user profile icon" class="user-icon" src="../images/icons/user3.png">
+<!--                        <img alt="user profile icon" class="user-icon" src="../images/icons/user3.png">-->
                         <span>Pappy</span>
                     </a>
                     <a class="profile-item d-flex flex-middle" href="#" style="margin-bottom: 13px;">
-                        <img alt="user profile icon" class="user-icon" src="../images/icons/user4.png">
+<!--                        <img alt="user profile icon" class="user-icon" src="../images/icons/user4.png">-->
                         <span>Denny</span>
                     </a>
                     <a class="profile-item last" href="#">Manage Profiles</a>
@@ -124,9 +124,7 @@
 <section class="footer-area" th:fragment="footer">
 
 </section>
-<script crossorigin="anonymous"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+
 <script crossorigin="anonymous"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
