--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,95 +1,51 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <link th:href="@{/web/css/login.css}" rel="stylesheet">-->
-<!--    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">-->
-<!--            <div class="card border-0 shadow rounded-3 my-5">-->
-<!--                <div class="card-body p-4 p-sm-5">-->
-<!--                    <h5 class="card-title text-center mb-5 fw-light fs-5">Đăng nhập</h5>-->
-<!--                    <form th:action="@{/login}" th:method="post">-->
-<!--                        <div class="form-floating mb-3">-->
-<!--                            <label for="floatingInput">Địa chỉ email</label>-->
-<!--                            <input type="text" class="form-control" name="email" id="floatingInput" placeholder="Nhập địa chỉ email">-->
-<!--                        </div>-->
-<!--                        <div class="form-floating mb-3">-->
-<!--                            <label for="floatingPassword">Mật khẩu</label>-->
-<!--                            <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Nhập mật khẩu">-->
-<!--                        </div>-->
-
-<!--                        <div class="form-check mb-3">-->
-<!--                            <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">-->
-<!--                            <label class="form-check-label" for="rememberPasswordCheck">-->
-<!--                                Remember password-->
-<!--                            </label>-->
-<!--                        </div>-->
-<!--                        <div class="d-grid">-->
-<!--                            <button class="btn btn-primary btn-login text-uppercase fw-bold" type="submit">Sign-->
-<!--                                in</button>-->
-<!--                        </div>-->
-<!--                        <hr class="my-4">-->
-<!--                        <div class="d-grid mb-2">-->
-
-<!--                        </div>-->
-<!--                        <div class="d-grid">-->
-
-<!--                        </div>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>-->
-<!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
-<!--</body>-->
-
-<!--</html>-->
-
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-
 <div class="container">
-  <h2>Modal Example</h2>
-  <!-- Trigger the modal with a button -->
-  <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card border-0 shadow rounded-3 my-5">
+                <div class="card-body p-4 p-sm-5">
+                    <h5 class="card-title text-center mb-5 fw-light fs-5">Đăng nhập</h5>
+                    <form th:action="@{/login}" th:method="post">
+                        <div class="form-floating mb-3">
+                            <label for="floatingInput">Địa chỉ email</label>
+                            <input type="text" class="form-control" name="email" id="floatingInput" placeholder="Nhập địa chỉ email">
+                        </div>
+                        <div class="form-floating mb-3">
+                            <label for="floatingPassword">Mật khẩu</label>
+                            <input type="password" class="form-control" name="password" id="floatingPassword" placeholder="Nhập mật khẩu">
+                        </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Modal Header</h4>
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" value="" id="rememberPasswordCheck">
+                            <label class="form-check-label" for="rememberPasswordCheck">
+                                Remember password
+                            </label>
+                        </div>
+                        <div class="d-grid">
+                            <button class="btn btn-primary btn-login text-uppercase fw-bold"
+                                    type="submit">Đăng nhập</button>
+                        </div>
+                        <hr class="my-4">
+                        <div class="d-grid mb-2">
+
+                        </div>
+                        <div class="d-grid">
+
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="modal-body">
-          <p>Some text in the modal.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-      
     </div>
-  </div>
-  
 </div>
-
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
+
 </html>
