complete spring security Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -138,6 +138,15 @@
 <footer th:replace="web/layout::footer">
 
 </footer>
-<script type="application/javascript" th:src="@{/web/js/index.js}"></script>
+<script type="application/javascript">
+    $(document).ready(function (){
+        $(".play-button").click(function (){
+            var id= $(this).attr("id");
+            console.log("http://localhost:8080/home/movie?id="+id);
+            var url="http://localhost:8080/home/movie?id="+id;
+            window.location.replace(url)
+        });
+    })
+</script>
 </body>
 </html>
