ss Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/static/web/css/movie-detail.css
+++ b/src/main/resources/static/web/css/movie-detail.css
@@ -136,6 +136,10 @@
 .comment {
     display: block;
     transition: all 1s;
+
+}
+.comment p{
+    color: black;
 }
 .commentClicked {
     min-height: 0px;
