--- a/src/main/resources/templates/web/index.html
+++ b/src/main/resources/templates/web/index.html
@@ -141,9 +141,8 @@
 <script type="application/javascript">
     $(document).ready(function (){
         $(".play-button").click(function (){
-            var id= $(this).attr("id");
-            console.log("http://localhost:8080/home/movie?id="+id);
-            var url="http://localhost:8080/home/movie?id="+id;
+            let id= $(this).attr("id");
+            let url="http://localhost:8080/home/movie?id="+id;
             window.location.replace(url)
         });
     })
