hoan thanh comment
Signed-off-by: ngochoang0109 <hoangtn0109@gmail.com>

--- a/src/main/resources/templates/admin/movie-add.html
+++ b/src/main/resources/templates/admin/movie-add.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="videoTrailer" class="form-label">Chon video trailer</label>
-                                <input type="file" id="videoTrailer" th:field="*{videoTrailer}" class="form-control">
+                                <input type="text" id="videoTrailer" th:field="*{videoTrailer}" class="form-control">
                             </div>
                             <div class="mb-3">
                                 <label for="videoMovie" class="form-label">Chon video movie</label>
